fix some user nickname too long to destory the style

--- a/public/style/ranklist.css
+++ b/public/style/ranklist.css
@@ -10,5 +10,5 @@
 }
 .bg {
 	height: 200px;
-	background: #00FF00 url(../pageimg/rankbg.png) no-repeat fixed top;
+	background: #00FF00 url(../pageimg/rankbg.png) no-repeat 0px top;
 }
